--- a/env.example
+++ b/env.example
@@ -5,8 +5,11 @@ NEARAI_API_KEY=sk-your-api-key-here
 SLACK_BOT_TOKEN=xoxb-your-bot-token
 SLACK_APP_TOKEN=xapp-your-app-token
 
+# Gateway Token (required, for authentication)
+CLAWDBOT_GATEWAY_TOKEN=your-gateway-token
+
 # Optional: Slack signing secret (for HTTP mode)
 SLACK_SIGNING_SECRET=your-signing-secret
 
-# Gateway Token (optional, for authentication)
-CLAWDBOT_GATEWAY_TOKEN=your-gateway-token
+# Optional: Force config regeneration (set to "1" to regenerate config from template)
+# CLAWDBOT_FORCE_CONFIG_REGEN=1
