--- a/env.example
+++ b/env.example
@@ -9,7 +9,7 @@ SLACK_APP_TOKEN=xapp-your-app-token
 CLAWDBOT_GATEWAY_TOKEN=your-gateway-token
 
 # Optional: Slack signing secret (for HTTP mode)
-SLACK_SIGNING_SECRET=your-signing-secret
+# SLACK_SIGNING_SECRET=your-signing-secret
 
 # Optional: Force config regeneration (set to "1" to regenerate config from template)
 # CLAWDBOT_FORCE_CONFIG_REGEN=1
