--- a/clawdbot.json.template
+++ b/clawdbot.json.template
@@ -50,6 +50,7 @@
     }
   },
   "gateway": {
+    "mode": "local",
     "bind": "lan",
     "port": 18789,
     "auth": {
@@ -64,6 +65,13 @@
         "responses": {
           "enabled": true
         }
+      }
+    }
+  },
+  "plugins": {
+    "entries": {
+      "slack": {
+        "enabled": true
       }
     }
   }
