--- a/moltbot.json.template
+++ b/moltbot.json.template
@@ -61,7 +61,7 @@
     "port": 18789,
     "auth": {
       "mode": "token",
-      "token": "${CLAWDBOT_GATEWAY_TOKEN}"
+      "token": "${MOLTBOT_GATEWAY_TOKEN}"
     },
     "http": {
       "endpoints": {
