fix: docker compose

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -29,7 +29,7 @@ services:
         "clawdbot",
         "gateway",
         "--bind",
-        "lan",
+        "loopback",
         "--port",
         "18789",
         "--verbose"
