--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,18 +1,11 @@
 services:
   clawdbot-gateway:
-    image: robortyan/clawdbot-nearai-worker:latest
+    image: nearaidev/moltbot-nearai-worker:dev
     environment:
       HOME: /home/node
       TERM: xterm-256color
-      # Gateway configuration (required)
-      CLAWDBOT_GATEWAY_TOKEN: ${CLAWDBOT_GATEWAY_TOKEN}
       # NEAR AI Cloud API Key
       NEARAI_API_KEY: ${NEARAI_API_KEY}
-      # Slack configuration
-      SLACK_BOT_TOKEN: ${SLACK_BOT_TOKEN}
-      SLACK_APP_TOKEN: ${SLACK_APP_TOKEN}
-      # Optional: Slack signing secret for HTTP mode
-      SLACK_SIGNING_SECRET: ${SLACK_SIGNING_SECRET:-}
       # Optional: Force config regeneration (set to "1" to regenerate config from template)
       CLAWDBOT_FORCE_CONFIG_REGEN: ${CLAWDBOT_FORCE_CONFIG_REGEN:-0}
     volumes:
@@ -34,7 +27,7 @@ services:
         "clawdbot",
         "gateway",
         "--bind",
-        "lan",
+        "loopback",
         "--port",
         "18789",
         "--verbose"
