fix: gateway running in foreground

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -26,6 +26,7 @@ services:
       [
         "openclaw",
         "gateway",
+        "run",
         "--bind",
         "loopback",
         "--port",
