--- a/openclaw.json.template
+++ b/openclaw.json.template
@@ -47,7 +47,7 @@
       "mode": "token",
       "token": "${OPENCLAW_GATEWAY_TOKEN}"
     },
-    "bind": "loopback",
+    "bind": "lan",
     "port": 18789,
     "http": {
       "endpoints": {
