--- a/openclaw.json.template
+++ b/openclaw.json.template
@@ -14,12 +14,40 @@
             "reasoning": false,
             "input": ["text"],
             "cost": {
-              "input": 0,
-              "output": 0,
+              "input": 0.85,
+              "output": 3.3,
               "cacheRead": 0,
               "cacheWrite": 0
             },
             "contextWindow": 200000,
+            "maxTokens": 8192
+          },
+          {
+            "id": "deepseek-ai/DeepSeek-V3.1",
+            "name": "DeepSeek V3.1",
+            "reasoning": true,
+            "input": ["text"],
+            "cost": {
+              "input": 1.05,
+              "output": 3.1,
+              "cacheRead": 0,
+              "cacheWrite": 0
+            },
+            "contextWindow": 128000,
+            "maxTokens": 8192
+          },
+          {
+            "id": "Qwen/Qwen3-30B-A3B-Instruct-2507",
+            "name": "Qwen3 30B A3B Instruct",
+            "reasoning": false,
+            "input": ["text"],
+            "cost": {
+              "input": 0.15,
+              "output": 0.55,
+              "cacheRead": 0,
+              "cacheWrite": 0
+            },
+            "contextWindow": 262144,
             "maxTokens": 8192
           }
         ]
@@ -32,9 +60,11 @@
         "primary": "nearai/zai-org/GLM-4.7"
       },
       "models": {
-        "nearai/zai-org/GLM-4.7": {}
+        "nearai/zai-org/GLM-4.7": {},
+        "nearai/deepseek-ai/DeepSeek-V3.1": {},
+        "nearai/Qwen/Qwen3-30B-A3B-Instruct-2507": {}
       },
-      "workspace": "/home/node/openclaw",
+      "workspace": "/home/agent/openclaw",
       "maxConcurrent": 4,
       "subagents": {
         "maxConcurrent": 8
@@ -47,7 +77,7 @@
       "mode": "token",
       "token": "${OPENCLAW_GATEWAY_TOKEN}"
     },
-    "bind": "loopback",
+    "bind": "lan",
     "port": 18789,
     "http": {
       "endpoints": {
