--- a/env.example
+++ b/env.example
@@ -3,3 +3,7 @@ NEARAI_API_KEY=sk-your-api-key-here
 
 # Optional: Force config regeneration (set to "1" to regenerate config from template)
 # OPENCLAW_FORCE_CONFIG_REGEN=1
+
+# Optional: Gateway bind — "lan" (default, local network) or "loopback" (localhost only).
+# See README security section when using "lan".
+# OPENCLAW_GATEWAY_BIND=lan
