--- a/env.example
+++ b/env.example
@@ -7,3 +7,8 @@ NEARAI_API_KEY=sk-your-api-key-here
 # Optional: Gateway bind — "lan" (default, local network) or "loopback" (localhost only).
 # See README security section when using "lan".
 # OPENCLAW_GATEWAY_BIND=lan
+
+# Optional: SSH public key for key-based login into the container (e.g. contents of ~/.ssh/id_ed25519.pub).
+# When set, an SSH server runs on port 2222 inside the container. Connect from host: ssh -p 2222 agent@localhost
+# From external network: ssh -p 2222 agent@<host-ip> (ensure host firewall/NAT allows port 2222).
+# SSH_PUBKEY="ssh-ed25519 AAAA... your-key"
