fix: set reasoning `false` for GLM-4.7 because it will cause some issue when chat on TUI or TG Bot

--- a/openclaw.json.template
+++ b/openclaw.json.template
@@ -11,7 +11,7 @@
           {
             "id": "zai-org/GLM-4.7",
             "name": "GLM-4.7",
-            "reasoning": true,
+            "reasoning": false,
             "input": ["text"],
             "cost": {
               "input": 0.85,
