feat: install more tools in docker image (#12)
Co-authored-by: Coffee <zjchen1234@foxmail.com>

--- a/openclaw.json.template
+++ b/openclaw.json.template
@@ -25,7 +25,7 @@
           {
             "id": "deepseek-ai/DeepSeek-V3.1",
             "name": "DeepSeek V3.1",
-            "reasoning": true,
+            "reasoning": false,
             "input": ["text"],
             "cost": {
               "input": 1.05,
