--- a/env.example
+++ b/env.example
@@ -12,3 +12,6 @@ NEARAI_API_KEY=sk-your-api-key-here
 # When set, an SSH server runs on port 2222 inside the container. Connect from host: ssh -p 2222 agent@localhost
 # From external network: ssh -p 2222 agent@<host-ip> (ensure host firewall/NAT allows port 2222).
 # SSH_PUBKEY="ssh-ed25519 AAAA... your-key"
+
+# Optional: Allow agent user to run sudo without password (e.g. su to root for debugging). Set to "1" to enable.
+# ALLOW_AGENT_SUDO=0
