--- a/env.example
+++ b/env.example
@@ -13,5 +13,5 @@ NEARAI_API_KEY=sk-your-api-key-here
 # From external network: ssh -p 2222 agent@<host-ip> (ensure host firewall/NAT allows port 2222).
 # SSH_PUBKEY="ssh-ed25519 AAAA... your-key"
 
-# Optional: Allow agent user to run sudo without password (e.g. su to root for debugging). Set to "1" to enable.
+# Optional: Allow agent user to run sudo without password (e.g. `sudo su -` or `sudo <command>` for debugging). Set to "1" to enable.
 # ALLOW_AGENT_SUDO=0
