feat: upgrade dstack-ingress to 1.2, refactor compose-api
- Upgrade dstack-ingress from 20250929 to 1.2 with SHA pinning
- Refactor compose-api: improved compose management, DNS, nginx config, error handling
- Simplify backup and store modules

--- a/compose-api/docker-compose.worker.yml
+++ b/compose-api/docker-compose.worker.yml
@@ -5,6 +5,8 @@
 services:
   gateway:
     image: ${OPENCLAW_IMAGE:-openclaw-nearai-worker:local}
+    labels:
+      openclaw.managed: "true"
     environment:
       HOME: /home/agent
       TERM: xterm-256color
