--- a/compose-api/docker-compose.worker.yml
+++ b/compose-api/docker-compose.worker.yml
@@ -11,6 +11,7 @@ services:
       HOME: /home/agent
       TERM: xterm-256color
       NEARAI_API_KEY: ${NEARAI_API_KEY}
+      NEARAI_API_URL: ${NEARAI_API_URL:-https://cloud-api.near.ai/v1}
       OPENCLAW_GATEWAY_TOKEN: ${OPENCLAW_GATEWAY_TOKEN:-}
       OPENCLAW_FORCE_CONFIG_REGEN: ${OPENCLAW_FORCE_CONFIG_REGEN:-1}
       OPENCLAW_GATEWAY_BIND: ${OPENCLAW_GATEWAY_BIND:-lan}
