--- a/deploy/docker-compose.yml
+++ b/deploy/docker-compose.yml
@@ -7,6 +7,8 @@ services:
       TERM: xterm-256color
       # NEAR AI Cloud API Key
       NEARAI_API_KEY: ${NEARAI_API_KEY}
+      # NEAR AI Cloud API URL (default: https://cloud-api.near.ai/v1)
+      NEARAI_API_URL: ${NEARAI_API_URL:-https://cloud-api.near.ai/v1}
       # Optional: Force config regeneration (set to "1" to regenerate config from template)
       OPENCLAW_FORCE_CONFIG_REGEN: ${OPENCLAW_FORCE_CONFIG_REGEN:-0}
       # Optional: Gateway bind address — "lan" (default) or "loopback". See README security section.
