feat: make compose source of truth, updater bootstraps stack
- Parameterize images in docker-compose.dstack.yml (ingress, datadog)
  so they're resolved via env vars instead of Jinja2
- Add healthcheck + datadog agent to dstack compose
- Updater bundles compose file and bootstraps all services on first boot
- parse_image() handles registries with ports, http for localhost
- Add cosign skip-verify for local dev
- Remove deploy.sh and docker-compose.simple.yml (replaced by dev.sh)
- Fix CI build context for updater (needs repo root)

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -36,7 +36,7 @@ jobs:
             dockerfile: compose-api/Dockerfile
             build_script: false
           - name: openclaw-updater
-            context: updater
+            context: .
             dockerfile: updater/Dockerfile
             build_script: false
     steps:
