--- a/deploy/docker-compose.local.yml
+++ b/deploy/docker-compose.local.yml
@@ -79,7 +79,7 @@ services:
     environment:
       - UPDATER_COMPOSE_API_IMAGE=${COMPOSE_API_IMAGE_REPO:-}
       - UPDATER_WORKER_IMAGE=${WORKER_IMAGE_REPO:-}
-      - UPDATER_SELF_IMAGE=${UPDATER_SELF_IMAGE:-}
+      - UPDATER_SELF_IMAGE=${UPDATER_IMAGE_REPO:-}
       - UPDATER_CHANNEL=${UPDATER_CHANNEL:-latest}
       - UPDATER_POLL_INTERVAL=${UPDATER_POLL_INTERVAL:-300}
       - UPDATER_COMPOSE_FILE=${UPDATER_COMPOSE_FILE:-/app/deploy/docker-compose.local.yml}
@@ -92,6 +92,7 @@ services:
       - UPDATER_HEALTH_TIMEOUT=60
       - UPDATER_STATE_FILE=/app/data/updater-state.json
       - UPDATER_SKIP_VERIFY=${UPDATER_SKIP_VERIFY:-0}
+      - UPDATER_HOST_DEPLOY_DIR=${DEPLOY_DIR:-.}
     restart: unless-stopped
     depends_on:
       - compose-api
