fix: add compose-files volume to updater in prod compose
The bootstrap template mounts compose-files:/app/compose-live for
writable compose file storage, but the prod compose lacked this
volume. Post-bootstrap updater couldn't find its compose file,
breaking compose_up(), restarts, and rollbacks on CVM deployments.

Backwards-compatible: on standard/local deploys UPDATER_COMPOSE_FILE
defaults to /app/deploy/ so the volume goes unused.

--- a/deploy/docker-compose.dstack.yml
+++ b/deploy/docker-compose.dstack.yml
@@ -70,6 +70,7 @@ services:
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
       - management-data:/app/data
+      - compose-files:/app/compose-live
       - ${DEPLOY_DIR:-.}:/app/deploy
     environment:
       - UPDATER_COMPOSE_API_IMAGE=${COMPOSE_API_IMAGE_REPO:-}
@@ -159,3 +160,4 @@ volumes:
   cert-data:
   nginx-dynamic:
   management-data:
+  compose-files:
