--- a/deploy/docker-compose.local.yml
+++ b/deploy/docker-compose.local.yml
@@ -1,50 +1,55 @@
+# Local Development Stack
+#
+# Runs the full management stack on macOS Docker Desktop without CVM dependencies.
+# Usage (from repo root):
+#   ./deploy/dev.sh              # build + start
+#   ./deploy/dev.sh --no-build   # start without rebuilding
+#   ./deploy/dev.sh --down       # tear down
+#
+# Or manually:
+#   docker compose -f deploy/docker-compose.local.yml --env-file deploy/.env.dstack.local up -d
+
 services:
-  cert-init:
+  # One-shot: create empty backends.map so nginx can start
+  nginx-init:
     image: alpine:3
     volumes:
-      - cert-data:/etc/letsencrypt
-    entrypoint: ["/bin/sh", "-c", "mkdir -p /etc/letsencrypt/live && ln -sfn ${OPENCLAW_DOMAIN} '/etc/letsencrypt/live/*.${OPENCLAW_DOMAIN}'"]
+      - nginx-dynamic:/data/nginx
+    entrypoint: ["/bin/sh", "-c", "touch /data/nginx/backends.map"]
     restart: "no"
 
+  # HTTP-only nginx (replaces dstack-ingress in production)
+  # Container name must be "dstack-ingress" so compose-api's
+  # `docker exec dstack-ingress nginx -s reload` works unchanged.
   dstack-ingress:
-    image: ${INGRESS_IMAGE:-dstacktee/dstack-ingress:1.2@sha256:549d6864ccbde3f35622a4bfbbc54911363650de84f37698d72d85ec4714d6fd}
+    image: ${INGRESS_IMAGE:-nginx:alpine}
     container_name: dstack-ingress
     network_mode: host
-    environment:
-      - DOMAINS=*.${OPENCLAW_DOMAIN}
-      - CERTBOT_EMAIL=${CERTBOT_EMAIL}
-      - DNS_PROVIDER=cloudflare
-      - CLOUDFLARE_API_TOKEN=${CLOUDFLARE_API_TOKEN}
-      - GATEWAY_DOMAIN=${GATEWAY_DOMAIN}
     volumes:
-      - /var/run/dstack.sock:/var/run/dstack.sock
-      - /var/run/tappd.sock:/var/run/tappd.sock
-      - cert-data:/etc/letsencrypt
       - nginx-dynamic:/data/nginx
     configs:
       - source: openclaw_nginx
         target: /etc/nginx/conf.d/openclaw.conf
     depends_on:
-      cert-init:
+      nginx-init:
         condition: service_completed_successfully
     restart: unless-stopped
 
   compose-api:
     image: ${COMPOSE_API_IMAGE:-openclaw-compose-api:local}
-    network_mode: host
+    ports:
+      - "8080:8080"
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
-      - /var/run/dstack.sock:/var/run/dstack.sock
       - management-data:/app/data
       - nginx-dynamic:/data/nginx
-      - cert-data:/etc/letsencrypt
     environment:
       - ADMIN_TOKEN=${ADMIN_TOKEN}
       - OPENCLAW_DOMAIN=${OPENCLAW_DOMAIN}
       - OPENCLAW_IMAGE=${OPENCLAW_IMAGE}
-      - CLOUDFLARE_API_TOKEN=${CLOUDFLARE_API_TOKEN}
-      - CLOUDFLARE_ZONE_ID=${CLOUDFLARE_ZONE_ID}
-      - GATEWAY_DOMAIN=${GATEWAY_DOMAIN}
+      - CLOUDFLARE_API_TOKEN=${CLOUDFLARE_API_TOKEN:-}
+      - CLOUDFLARE_ZONE_ID=${CLOUDFLARE_ZONE_ID:-}
+      - GATEWAY_DOMAIN=${GATEWAY_DOMAIN:-}
       - NGINX_MAP_PATH=/data/nginx/backends.map
       - INGRESS_CONTAINER_NAME=dstack-ingress
       - COMPOSE_FILE=/app/docker-compose.worker.yml
@@ -70,7 +75,6 @@ services:
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
       - management-data:/app/data
-      - compose-files:/app/compose-live
       - ${DEPLOY_DIR:-.}:/app/deploy
     environment:
       - UPDATER_COMPOSE_API_IMAGE=${COMPOSE_API_IMAGE_REPO:-}
@@ -78,15 +82,17 @@ services:
       - UPDATER_SELF_IMAGE=${UPDATER_IMAGE_REPO:-}
       - UPDATER_CHANNEL=${UPDATER_CHANNEL:-latest}
       - UPDATER_POLL_INTERVAL=${UPDATER_POLL_INTERVAL:-300}
-      - UPDATER_COMPOSE_FILE=${UPDATER_COMPOSE_FILE:-/app/deploy/docker-compose.dstack.yml}
-      - UPDATER_ENV_FILE=${UPDATER_ENV_FILE:-/app/deploy/.env.dstack}
-      - UPDATER_BASE_ENV_FILE=${UPDATER_BASE_ENV_FILE:-}
-      - UPDATER_COMPOSE_PROJECT=${UPDATER_COMPOSE_PROJECT:-}
+      - UPDATER_COMPOSE_FILE=${UPDATER_COMPOSE_FILE:-/app/deploy/docker-compose.local.yml}
+      - UPDATER_ENV_FILE=/app/data/.env.overrides
+      - UPDATER_BASE_ENV_FILE=/app/deploy/.env.dstack.local
+      - UPDATER_COMPOSE_PROJECT=deploy
       - UPDATER_COSIGN_IDENTITY_REGEXP=${UPDATER_COSIGN_IDENTITY:-}
       - UPDATER_COSIGN_ISSUER=https://token.actions.githubusercontent.com
       - UPDATER_HEALTH_URL=http://127.0.0.1:8080/health
       - UPDATER_HEALTH_TIMEOUT=60
       - UPDATER_STATE_FILE=/app/data/updater-state.json
+      - UPDATER_SKIP_VERIFY=${UPDATER_SKIP_VERIFY:-0}
+      - UPDATER_HOST_DEPLOY_DIR=${DEPLOY_DIR:-.}
     restart: unless-stopped
     depends_on:
       - compose-api
@@ -95,8 +101,10 @@ services:
     image: ${DATADOG_IMAGE:-datadog/agent:latest}
     container_name: datadog-agent
     network_mode: host
+    profiles:
+      - monitoring
     environment:
-      - DD_API_KEY=${DD_API_KEY}
+      - DD_API_KEY=${DD_API_KEY:-}
       - DD_SITE=us3.datadoghq.com
       - DD_ENV=${DD_ENV:-dev}
       - DD_HOSTNAME=${DD_HOSTNAME:-openclaw-management-stack}
@@ -108,9 +116,14 @@ services:
       - DD_DOGSTATSD_NON_LOCAL_TRAFFIC=true
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock:ro
-      - /proc/:/host/proc/:ro
-      - /sys/fs/cgroup/:/host/sys/fs/cgroup:ro
-      - /var/lib/docker/containers:/var/lib/docker/containers:ro
+    restart: unless-stopped
+
+  registry:
+    image: registry:2
+    ports:
+      - "5050:5000"
+    volumes:
+      - registry-data:/var/lib/registry
     restart: unless-stopped
 
 configs:
@@ -122,11 +135,7 @@ configs:
 
       server {
           listen 80 default_server;
-          listen 443 ssl;
-          server_name *.${OPENCLAW_DOMAIN};
-
-          ssl_certificate /etc/letsencrypt/live/${OPENCLAW_DOMAIN}/fullchain.pem;
-          ssl_certificate_key /etc/letsencrypt/live/${OPENCLAW_DOMAIN}/privkey.pem;
+          server_name _;
 
           location / {
               proxy_pass $$openclaw_backend;
@@ -134,30 +143,20 @@ configs:
               proxy_set_header Upgrade $$http_upgrade;
               proxy_set_header Connection "upgrade";
               proxy_set_header Host $$host;
-              proxy_set_header X-Real-IP $$remote_addr;
-              proxy_set_header X-Forwarded-For $$proxy_add_x_forwarded_for;
-              proxy_set_header X-Forwarded-Proto $$scheme;
           }
       }
 
       server {
-          listen 443 ssl;
-          server_name api.${OPENCLAW_DOMAIN};
-
-          ssl_certificate /etc/letsencrypt/live/${OPENCLAW_DOMAIN}/fullchain.pem;
-          ssl_certificate_key /etc/letsencrypt/live/${OPENCLAW_DOMAIN}/privkey.pem;
+          listen 80;
+          server_name api.localhost;
 
           location / {
               proxy_pass http://127.0.0.1:8080;
               proxy_set_header Host $$host;
-              proxy_set_header X-Real-IP $$remote_addr;
-              proxy_set_header X-Forwarded-For $$proxy_add_x_forwarded_for;
-              proxy_set_header X-Forwarded-Proto $$scheme;
           }
       }
 
 volumes:
-  cert-data:
   nginx-dynamic:
   management-data:
-  compose-files:
+  registry-data:
