--- a/deploy/docker-compose.dstack.yml
+++ b/deploy/docker-compose.dstack.yml
@@ -42,6 +42,7 @@ services:
       - ADMIN_TOKEN=${ADMIN_TOKEN}
       - OPENCLAW_DOMAIN=${OPENCLAW_DOMAIN}
       - OPENCLAW_IMAGE=${OPENCLAW_IMAGE}
+      - IRONCLAW_IMAGE=${IRONCLAW_IMAGE:-ironclaw-nearai-worker:local}
       - CLOUDFLARE_API_TOKEN=${CLOUDFLARE_API_TOKEN}
       - CLOUDFLARE_ZONE_ID=${CLOUDFLARE_ZONE_ID}
       - GATEWAY_DOMAIN=${GATEWAY_DOMAIN}
