--- a/deploy/.env.dstack.example
+++ b/deploy/.env.dstack.example
@@ -5,6 +5,7 @@ CLOUDFLARE_ZONE_ID=<zone-id>
 GATEWAY_DOMAIN=_.your-gateway.example.com
 CERTBOT_EMAIL=admin@example.com
 OPENCLAW_IMAGE=openclaw-nearai-worker:local
+IRONCLAW_IMAGE=ironclaw-nearai-worker:local
 
 # Updater configuration
 COMPOSE_API_IMAGE=openclaw-compose-api:local
