fix: disable nginx buffering for SSE and WebSocket connections
SSE EventSource connections were stuck in "pending" state because nginx
buffers responses by default. Since SSE is an infinite stream, nginx
never receives a complete response to flush to the client.

--- a/deploy/nginx-openclaw.conf
+++ b/deploy/nginx-openclaw.conf
@@ -11,6 +11,12 @@
 # DNS: A record for OPENCLAW_DOMAIN and *.OPENCLAW_DOMAIN → your server IP.
 # Backend: Management API must be listening on 127.0.0.1:47392 (e.g. docker compose -f docker-compose.nginx.yml with port 47392 published).
 
+# Must be in http context (outside server block).
+map $http_upgrade $connection_upgrade {
+    default upgrade;
+    ''      close;
+}
+
 server {
     listen 80;
     server_name OPENCLAW_DOMAIN *.OPENCLAW_DOMAIN;
@@ -22,7 +28,14 @@ server {
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
-        proxy_read_timeout 300s;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection $connection_upgrade;
+        proxy_read_timeout 86400s;
         proxy_connect_timeout 75s;
+
+        # Disable buffering for SSE and WebSocket.
+        # The backend also sends X-Accel-Buffering: no on SSE responses.
+        proxy_buffering off;
+        proxy_cache off;
     }
 }
