--- a/deploy/docker-compose.dstack.yml
+++ b/deploy/docker-compose.dstack.yml
@@ -131,6 +131,11 @@ configs:
           include /data/nginx/backends.map;
       }
 
+      map $$http_upgrade $$connection_upgrade {
+          default upgrade;
+          ''      close;
+      }
+
       server {
           listen 80 default_server;
           listen 443 ssl;
@@ -143,11 +148,14 @@ configs:
               proxy_pass $$openclaw_backend;
               proxy_http_version 1.1;
               proxy_set_header Upgrade $$http_upgrade;
-              proxy_set_header Connection "upgrade";
+              proxy_set_header Connection $$connection_upgrade;
               proxy_set_header Host $$host;
               proxy_set_header X-Real-IP $$remote_addr;
               proxy_set_header X-Forwarded-For $$proxy_add_x_forwarded_for;
               proxy_set_header X-Forwarded-Proto $$scheme;
+              proxy_read_timeout 86400s;
+              proxy_buffering off;
+              proxy_cache off;
           }
       }
 
