fix: return 503 for stopped instances and cap nginx workers at 8
Stopped/unknown instance subdomains caused nginx 500s because the map
had no default, making proxy_pass blow up on empty string. Add an if
guard to return 503 with a JSON body instead. Also cap worker_processes
at 8 (down from auto=88 cores) since this is an I/O-bound reverse proxy.

--- a/deploy/docker-compose.dstack.yml
+++ b/deploy/docker-compose.dstack.yml
@@ -144,7 +144,13 @@ configs:
           ssl_certificate /etc/letsencrypt/live/${OPENCLAW_DOMAIN}/fullchain.pem;
           ssl_certificate_key /etc/letsencrypt/live/${OPENCLAW_DOMAIN}/privkey.pem;
 
+          default_type application/json;
+
           location / {
+              if ($$openclaw_backend = "") {
+                  return 503 '{"error":"instance_not_available","message":"This instance is stopped or does not exist"}';
+              }
+
               proxy_pass $$openclaw_backend;
               proxy_http_version 1.1;
               proxy_set_header Upgrade $$http_upgrade;
