feat: add default resource limits to worker instances (1g RAM, 2 vCPU, 10G storage)
Instances now get mem_limit, cpus, and storage_opt defaults via compose
templates. Admins can override per-instance via the POST /instances API
with mem_limit, cpus, and storage_size fields.

--- a/compose-api/docker-compose.ironclaw.yml
+++ b/compose-api/docker-compose.ironclaw.yml
@@ -16,6 +16,10 @@ services:
       OPENCLAW_GATEWAY_TOKEN: ${OPENCLAW_GATEWAY_TOKEN:-}
       SSH_PUBKEY: ${SSH_PUBKEY:-}
       BASTION_SSH_PUBKEY: ${BASTION_SSH_PUBKEY:-}
+    mem_limit: ${MEM_LIMIT:-1g}
+    cpus: ${CPUS:-2}
+    storage_opt:
+      size: ${STORAGE_SIZE:-10G}
     volumes:
       - config:/home/agent/.ironclaw
       - workspace:/home/agent/workspace
