fix: persist SERVICE_TYPE so ironclaw upgrades don't lose data
When compose-api restarts it rediscovers instances via docker inspect,
but SERVICE_TYPE was never in the container environment or labels — only
in the .env file used for compose variable interpolation. After
rediscovery service_type became None, causing upgrades to use the wrong
compose file (worker.yml instead of ironclaw.yml), mounting volumes at
wrong paths and making ironclaw create a fresh empty database.

- Add SERVICE_TYPE to environment block and labels in both compose
  templates so it survives rediscovery
- Add 3-level fallback in inspect_container: label → env → disk .env
- Fail loud in restart_instance when service_type is missing instead of
  silently defaulting to "openclaw"
- Fix export_instance_data to use correct paths per service type
- Always write SERVICE_TYPE in ensure_env_file

--- a/compose-api/docker-compose.worker.yml
+++ b/compose-api/docker-compose.worker.yml
@@ -8,6 +8,7 @@ services:
     init: true
     labels:
       openclaw.managed: "true"
+      openclaw.service_type: "${SERVICE_TYPE:-openclaw}"
     environment:
       HOME: /home/agent
       TERM: xterm-256color
@@ -19,6 +20,7 @@ services:
       OPENCLAW_AUTO_APPROVE_DEVICES: ${OPENCLAW_AUTO_APPROVE_DEVICES:-1}
       SSH_PUBKEY: ${SSH_PUBKEY:-}
       BASTION_SSH_PUBKEY: ${BASTION_SSH_PUBKEY:-}
+      SERVICE_TYPE: ${SERVICE_TYPE:-openclaw}
     command: ["openclaw", "gateway", "run", "--bind", "lan", "--port", "18789"]
     mem_limit: ${MEM_LIMIT:-4g}
     cpus: ${CPUS:-1}
