--- a/compose-api/docker-compose.ironclaw.yml
+++ b/compose-api/docker-compose.ironclaw.yml
@@ -7,6 +7,7 @@ services:
     image: ${OPENCLAW_IMAGE:-ironclaw-nearai-worker:local}
     labels:
       openclaw.managed: "true"
+      openclaw.service_type: "${SERVICE_TYPE:-ironclaw}"
     environment:
       HOME: /home/agent
       TERM: xterm-256color
@@ -16,6 +17,7 @@ services:
       OPENCLAW_GATEWAY_TOKEN: ${OPENCLAW_GATEWAY_TOKEN:-}
       SSH_PUBKEY: ${SSH_PUBKEY:-}
       BASTION_SSH_PUBKEY: ${BASTION_SSH_PUBKEY:-}
+      SERVICE_TYPE: ${SERVICE_TYPE:-ironclaw}
     mem_limit: ${MEM_LIMIT:-4g}
     cpus: ${CPUS:-1}
     volumes:
